@@ -6,6 +6,8 @@ duihome (0.21.9~1) unstable; urgency=low
   * Fixes: NB#169758 -  Launcher button not updated when desktop entry file is modified
   * Fixes: NB#168077 - launcherbuttons.data keys that do not belong to [DesktopEntries] group result in broken entries in the launcher
   * Fixes: NB#168422 - System modal dialog windows are shown in the switcher
+  * Refactoring launcher to add/remove items just one by one, not listen
+    dataStoreChanged() signal and to update to layouts only really changed items.
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 18 May 2010 10:00:00 +0300
 
